--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,36 @@
-<ion-app>
+<ion-app class="ios">
   <ion-split-pane>
-    <ion-menu>
+    <ion-menu [hidden]="!isLoggin" class="menu-desktop " type="overlay">
       <ion-header>
-        <ion-toolbar>
+        <ion-toolbar color="primary">
           <ion-title>Menu</ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content>
         <ion-list>
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
-            <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
-              <ion-icon slot="start" [name]="p.icon"></ion-icon>
+          <ion-menu-toggle auto-hide="false">
+            <span *ngFor="let p of appPages">
+              <ion-item [routerDirection]="'root'" [routerLink]="[p.url]" *ngIf="user && user.type === p.userType ">
+                <ion-icon slot="start" [name]="p.icon"></ion-icon>
+                <ion-label>
+                  {{p.title}}
+                </ion-label>
+              </ion-item>
+            </span>
+
+            <ion-item (click)="logout()" [routerDirection]="'root'" routerLink="/login">
+              <!-- <ion-item (click)="logout()"> -->
+              <ion-icon slot="start" name="log-out"></ion-icon>
               <ion-label>
-                {{p.title}}
+                Cerrar Sesión
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
       </ion-content>
     </ion-menu>
+
+
     <ion-router-outlet main></ion-router-outlet>
   </ion-split-pane>
 </ion-app>
