--- a/src/global.scss
+++ b/src/global.scss
@@ -3,10 +3,15 @@
 @import "~@ionic/angular/css/structure.css";
 @import "~@ionic/angular/css/typography.css";
 @import "~@ionic/angular/css/colors.css";
-
 @import "~@ionic/angular/css/padding.css";
 @import "~@ionic/angular/css/float-elements.css";
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+$mdc-theme-primary: #000000; // primary color
+$mdc-theme-secondary: #F5811E; // secondary color
+@import "~@angular-mdc/theme/material";
 
+.split-pane-ios.split-pane-visible>.split-pane-side {
+    max-width: 15% !important;
+}
