--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -23,7 +23,7 @@
 </ion-content> -->
 
 <div class="center-login">
-  <img src="../../../../src/assets/cobian-light.jpg" style="max-width: 19em" alt="">
+  <img src="assets/cobian-light.jpg" style="max-width: 19em" alt="">
 </div>
 <div *ngIf="!isFind" style="margin-top: 2%; margin-bottom: 2%; text-align: center;">
   <span class="alert alert-danger ">
