--- a/src/app/components/general/general-calendar/general-calendar.component.scss
+++ b/src/app/components/general/general-calendar/general-calendar.component.scss
@@ -14,7 +14,7 @@
 }
 
 .row-number-day2 {
-    padding: 15px !important;
+    padding: 15px 0px !important;
     text-align: left !important;
     border-bottom: 1px solid #ddd;
     vertical-align: top;
