--- a/src/global.scss
+++ b/src/global.scss
@@ -9,7 +9,7 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 $mdc-theme-primary: #000000; // primary color
-$mdc-theme-secondary: #F5811E; // secondary color
+$mdc-theme-secondary: #F5811E; // secondary color F58634
 @import "~@angular-mdc/theme/material";
 
 .split-pane-md.split-pane-visible>.split-pane-side {
