--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -43,7 +43,7 @@
       <span *ngIf="pass.dirty || pass.touched">Anota Contraseña</span>
     </mdc-text-field-helper-text>
     <ion-button color="primary" (click)="login()">Ingresar</ion-button>
-    <ion-button round fill="outline" color="secondary">Nuevo Usuario</ion-button>
+    <ion-button round fill="outline" color="secondary" (click)="newUser()">Nuevo Usuario</ion-button>
   </form>
   <div class="space-buttons"></div>
 </div>
