--- a/src/app/components/login/user-select/user-select.component.html
+++ b/src/app/components/login/user-select/user-select.component.html
@@ -51,7 +51,7 @@
     </ion-card>
     <ion-card class="user-select-card">
       <ion-card-header>
-        <ion-card-title>Asesor</ion-card-title>
+        <ion-card-title>Vendedor</ion-card-title>
       </ion-card-header>
       <ion-card-content>
         <ion-label>Usuario para aquirir o rentar propiedades</ion-label>
