--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -63,4 +63,6 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+  /** blue **/
+  --ion-color-blue: #0091EA;
 }
