--- a/src/app/components/buyer/credit-event-buyer/credit-event-buyer.component.html
+++ b/src/app/components/buyer/credit-event-buyer/credit-event-buyer.component.html
@@ -107,9 +107,9 @@
           <ion-label text-wrap>Solicita una de manera gratuita presionando en el botón:</ion-label>
         </ion-card-content>
         <ion-item lines="none">
-          <ion-button (click)="setLikeProperty(property._id)" color="secondary" fill="outline" slot="end">
+          <!-- <ion-button (click)="setLikeProperty(property._id)" color="secondary" fill="outline" slot="end">
             Solicitar Cita <ion-icon name="send"></ion-icon>
-          </ion-button>
+          </ion-button> -->
         </ion-item>
       </ion-card>
     </ng-template>
